--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</td>
 								<td>
 									<div class="input-group input-group-sm">
-										<select name="" id="" class="form-control" v-model="item.qty" :disabled="item.id === loadingItem"
+										<select name="" id="" class="form-select" v-model="item.qty" :disabled="item.id === loadingItem"
 											@change="updateCartItem(item)">
 											<option :value="i" v-for="i in 20" :key="i + '1234578'">{{i}}</option>
 										</select>
@@ -145,7 +145,7 @@
 
 					<div class="mb-3">
 						<label for="address" class="form-label">交易方式</label>
-						<v-field id="name" name="交易方式" class="form-control" :class="{ 'is-invalid': errors['交易方式'] }"
+						<v-field id="name" name="交易方式" class="form-select" :class="{ 'is-invalid': errors['交易方式'] }"
 							placeholder="請輸入交易方式" rules="required" v-model="form.user.shipping" as="select">
 							<option value="">請選擇交易方式</option>
 							<option value="ATM">ATM</option>
@@ -225,7 +225,7 @@
 								<div class="h5">{{tempProduct.price}}元</div>
 								<div>
 									<div class="input-group">
-										<select name="" id="" class="form-select" v-model="qty">
+										<select name="" id="" class="form-select" v-model="qty" >
 											<option :value="i" v-for="i in 20" :key="`${i}+1`">{{ i }}</option>
 										</select>
 										<button type="button" class="btn btn-primary"
